Changed button css

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -57,3 +57,10 @@
   font-size: 15px;
   text-align: right;
 }
+
+.Weather .appButton {
+  background-color: #7bc9f6;
+  border-color: #7bc9f6;
+  font-weight: 550;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
