--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,8 +1,10 @@
 .WeatherForecast {
   text-align: center;
+  color: #6b6b6b;
+  padding-bottom: 20px;
 }
 
 .WeatherForecast-temperature-min {
-  opacity: 0.6;
+  opacity: 0.7;
   margin-left: 5px;
 }
